# ai-email-notification

./: .env.example  .gitignore  README.md  ai_trainer_api.py  ai_trainer_store.py  apply_network_env.py  bookmarks_7_16_26.html  daily_ai_trainer_email_agent.py  daily_email_send.py  daily_email_vendor.py  daily_job_search_email_agent.py  daily_news_email_agent.py  daily_tech_news_email_agent.py  daily_top_news_email_agent.py  disable_daily_news_task.ps1  gmail_send.py  israel_top_news_api.py  job_search_api.py  job_search_apply.py  job_search_cv_loader.py  job_search_profile.py  job_search_quality.py  job_search_store.py  job_search_vector.py  llm_providers.py  network_env.py  news_headlines_api.py  outlook_mcp_env.py  outlook_send_helper.py  pyproject.toml  rss_fetch.py  run_daily_ai_trainer_email.bat  run_daily_job_search_email.bat  run_daily_news_email.bat  run_daily_tech_news_email.bat  run_daily_top_news_email.bat  setup_all_tasks.ps1  setup_daily_ai_trainer_task.ps1  setup_daily_job_search_profile_task.ps1  setup_daily_job_search_task.ps1  (+8 more)
data/job_profiles/: example_profile.json.template
docs/: README.md  README_AI_TRAINER.md  README_EMAIL_DELIVERY.md  README_ISRAEL_NEWS.md  README_JOB_SEARCH.md  README_MULTI_PROFILE.md  README_PINECONE.md  README_SCHEDULING.md  README_TECH_NEWS.md  README_TOP_NEWS.md  SETUP.md
